--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Chef</title>
 </head>
 <body>
-    <section class="homepage"></section>
+    <section class="homepage">
+        
+    </section>
 </body>
 </html>
