--- a/index.html
+++ b/index.html
@@ -4,12 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chef Website</title>
     <link rel="stylesheet" href="style.css">
-    <title>Chef</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="homepage">
-        
+        <nav class="navigation_bar">
+            <div class="nav_logo">
+                <h1>chEF</h1>
+            </div>
+            <div class="nav_contents">
+                <div class="nav_con">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Media</a></li>
+                        <li><a href="#">Cuisines</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        </ul>
+                </div>
+                <div class="hire">
+                    <li><a href="#">Hire Now</a></li>
+                </div>
+            </div>
+        </nav>
     </section>
 </body>
 </html>
