--- a/index.html
+++ b/index.html
@@ -82,6 +82,34 @@
         </div>
     </section>
 
-    <section class="second"></section>
+    <section class="second">
+
+       <div class="second_left">
+          <div class="chef_again">
+             <img src="assets/chef-2.png" alt="" class="chef-2">
+          </div>
+          <div class="salad">
+             <img src="assets/salad.png" alt="" class="salaad">
+          </div>
+          <div class="pizza">
+             <img src="assets/pizza.png" alt="" class="pizzaa">
+          </div>
+       </div>
+
+       <div class="second_right">
+          <div class="about_chef">
+             <h1>About Chef</h1>
+          </div>
+          <div class="chef_def">
+             <p>Chef has cretaed a bridge between the culinary traditions of his native American and Japan palate, bringing these intense excitement,exquisite technique, and perfectly balanced flavours to countless dinners throughout the world. He has garnered critical and popular acclaim of his seamless integration of Japanese and western ingredients and has effectively created a signature style that positions him as one of the foremost chef.</p>
+          </div>
+          <div class="know_more">
+              <div class="know">Know your chef</div>
+              <div class="arrow">
+                 <img src="assets/right-arrow.png" alt="" srcset="" class="right-arrow">
+              </div>
+            </div>
+       </div>
+    </section>
 </body>
 </html>
