--- a/index.html
+++ b/index.html
@@ -111,5 +111,56 @@
             </div>
        </div>
     </section>
+
+    <section class="third_page">
+        <div class="third_nav">
+           <div class="media"><h1>Media</h1></div>
+           <div class="view">View All</div>
+        </div>
+        <div class="media_cards">
+            <div class="card">
+                <div>
+                    <img src="assets/cake.png" alt="" class="card_img">
+                </div>
+                <div class="hint">Restaurants</div>
+                <h2 class="h2">Steak and Shrimp at Chef Mike's</h2>
+                <p class="card_text">At your door, Chef brings steak. It's the principle of on-demand home cooking.</p>
+                <div class="more_1">
+                    <div class="learn">Learn More</div> 
+                    <div class="arrow">
+                        <img src="assets/right-arrow.png" alt="" srcset="" class="right-arrow">
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div>
+                    <img src="assets/fruits.jpg" alt="" class="card_img">
+                </div>
+                <div class="hint">Ventures</div>
+                <h2 class="h2">Bulbous Markets</h2>
+                <p class="card_text">The possibilities are endless whien using the organic food and pantry essentials from Misfit Market.</p>
+                <div class="more">
+                    <div class="learn">Learn More</div> 
+                    <div class="arrow">
+                        <img src="assets/right-arrow.png" alt="" srcset="" class="right-arrow">
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div>
+                    <img src="assets/chefs_tv.jpg" alt="" class="card_img">
+                </div>
+                <div class="hint">TV</div>
+                <h2 class="h2">Aquaculture of Rock Shrimp</h2>
+                <p class="card_text">For the past quarter century. Food network has been my constant companion. Since starting on this voyage, it has...</p>
+                <div class="more">
+                    <div class="learn">Learn More</div> 
+                    <div class="arrow">
+                        <img src="assets/right-arrow.png" alt="" srcset="" class="right-arrow">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
