--- a/index.html
+++ b/index.html
@@ -162,5 +162,45 @@
             </div>
         </div>
     </section>
+
+    <section class="fourth_page">
+        <div class="cuisine"><h1>Cuisines</h1></div>
+        <div class="choices">
+            <div class="choice_1">
+                <div>
+                    <img src="assets/mexican.png" alt="" class="mexican">
+                </div>
+                <div class="mexican_text">Mexican</div>
+            </div>
+            <div class="choice_1">
+                <div>
+                    <img src="assets/italian.png" alt="" class="italian">
+                </div>
+                <div class="mexican_text">Italian</div>
+            </div>
+            <div class="choice_1">
+                <div>
+                    <img src="assets/chinese.png" alt="" class="chinese">
+                </div>
+                <div class="mexican_text">Chinese</div>
+            </div>
+        </div>
+
+        <div class="choices_more">
+            <div class="choice_2">
+                <div>
+                    <img src="assets/indian.png" alt="" class="indian">
+                </div>
+                <div class="mexican_text">Indian</div>
+            </div>
+            <div class="choice_2">
+                <div>
+                    <img src="assets/thai.png" alt="" class="thai">
+                </div>
+                <div class="mexican_text">Thai</div>
+            </div>
+        </div>
+    </section>
+    
 </body>
 </html>
