--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         </div>
     </section>
 
-    <section class="fourth_page">
+    <div class="fourth_page">
         <div class="cuisine"><h1>Cuisines</h1></div>
         <div class="choices">
             <div class="choice_1">
@@ -200,7 +200,18 @@
                 <div class="mexican_text">Thai</div>
             </div>
         </div>
-    </section>
-    
+
+        <h2 class="review">Reviews</h2>
+        <h1 class="opinion">Get The Opinion <br> Of The Foodies!</h1>
+
+        <div class="profiles">
+            <div>
+                <img src="assets/profile_1.png" alt="" class="profile_1" >
+            </div>
+            <div>
+                <img src="assets/profile_2.png" alt="" class="profile_2">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
