--- a/index.html
+++ b/index.html
@@ -201,15 +201,65 @@
             </div>
         </div>
 
-        <h2 class="review">Reviews</h2>
-        <h1 class="opinion">Get The Opinion <br> Of The Foodies!</h1>
-
-        <div class="profiles">
-            <div>
-                <img src="assets/profile_1.png" alt="" class="profile_1" >
+        <div class="review_page">
+            <div class="review_page_left">
+                <h2 class="review">Reviews</h2>
+                <h1 class="opinion">Get The Opinion <br> Of The Foodies!</h1>
+                
+                <div class="total_review">
+                    <div class="profiles">
+                        <div class="pair_1">
+                            <div>
+                                <img src="assets/profile_1.png" alt="" class="profile_1" >
+                            </div>
+                            <div>
+                                <img src="assets/profile_2.png" alt="" class="profile_2">
+                            </div>
+                        </div>
+                        <div class="pair_2">
+                            <div>
+                                <img src="assets/profile_1.png" alt="" class="profile_1" >
+                            </div>
+                            <div>
+                                <img src="assets/profile_2.png" alt="" class="profile_2">
+                            </div>
+                        </div>
+                            <div class="pair_3">
+                            <div>
+                                <img src="assets/profile_1.png" alt="" class="profile_1" >
+                            </div>
+                            <div>
+                                <img src="assets/profile_2.png" alt="" class="profile_2">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <div class="k_review">12.5k Reviews</div> -->
+                </div>
             </div>
-            <div>
-                <img src="assets/profile_2.png" alt="" class="profile_2">
+    
+            <div class="review_page_right">
+                <div>
+                    <img src="assets/girl.jpg" alt="" class="girl">
+                </div>
+                <div class="loreum">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. <br> <br>
+                    Allie Crater <br>
+                    Businesswoman
+                </div>
+            </div>
+        </div>
+
+        <div class="review_below">
+            <div class="hiring">
+                <div class="appoint"><h1>Appoint A Personal Chef.</h1>
+                </div>
+                <div class="concept">
+                    Give the concept of dining a whole new meaning. Bring the utmost culinary expertise into your home.
+                </div>
+            </div>
+            <div class="personal_chef">Hire personal chef</div>
+            <div class="arrow_1">
+                <img src="assets/right-arrow.png" alt="" srcset="" class="right-arrow-1">
             </div>
         </div>
     </div>
