--- a/index.html
+++ b/index.html
@@ -263,5 +263,18 @@
             </div>
         </div>
     </div>
+
+    <section class="footer">
+        <div class="nav_chef_again">
+            <div class="chef_again">
+                <img src="assets/chef-1.png" alt="">
+            </div>
+            <div class="nav_logo_again">
+                <h1>chEF</h1>
+            </div>
+        </div>
+        <div class="social_media">
+        </div>
+    </section>
 </body>
 </html>
