--- a/index.html
+++ b/index.html
@@ -273,7 +273,29 @@
                 <h1>chEF</h1>
             </div>
         </div>
-        <div class="social_media">
+        <div class="details">
+            <div class="location">
+                <div class="location_logo">
+                    <img src="assets/location.png" alt="" class="loc_img">
+                </div>
+                <div class="location_detail">Pond Road Franklin, UK</div>
+            </div>
+            <div class="call">
+                <div class="call_logo">
+                    <img src="assets/telephone.png" alt="" class="call_img">
+                </div>
+                <div class="call_detail">447700900077</div>
+            </div>
+            <div class="mail">
+                <div class="mail_logo">
+                    <img src="assets/gmail.png" alt="" class="mail_img">
+                </div>
+                <div class="mail_detail">chef@gmail.com</div>
+            </div>
+        </div>
+        <div class="copy">
+            <div class="copyright">All Rights Reserved</div>
+            <div class="name">Designed By Khushi Malhotra</div>
         </div>
     </section>
 </body>
