--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         </div>
         <div class="copy">
             <div class="copyright">All Rights Reserved</div>
-            <div class="name">Designed By Khushi Malhotra</div>
+            <div class="name">Designed By <a target="_blank" href="https://www.linkedin.com/in/khushi-malhotra-615a15252/">Khushi Malhotra</a></div>
         </div>
     </section>
 </body>
